--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
     </section>
 
-    <section class="contact container">
+    <section class="contact container mr-1">
         <div class="row">
             <div class="col-md-4 contact-contain-left">
                 <h1>Contact</h1>
@@ -261,51 +261,17 @@
             <div class="col-md-7 contact-contain-right">
                 <form action="">
                     <label for="">Name</label>
-                    <input type="text" placeholder="Your name" required>
+                    <input type="text" placeholder="Your name" required class="form-input">
                     <label for="">Email</label>
-                    <input type="email" placeholder="Your email" required>
+                    <input type="email" placeholder="Your email" required class="form-input">
                     <label for="">Message</label>
-                    <textarea placeholder="Message"></textarea>
-                    <input type="submit" value="Send">
+                    <textarea placeholder="Message" class="form-textarea"></textarea>
+                    <input type="submit" value="Send" class="btn-input">
                 </form>
             </div>
         </div>
     </section>
 
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
