Add event hover at cards projects

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
             <div class="row justify-content-around text-center">
                 <div class="col-sm-3">
                     <div class="project-container-description bg-project1">
-                        <div class="d-none">
-                            <h1 class="p\roject-container-title">Agency Digital</h1>
+                        <div class="d-none active">
+                            <h1 class="project-container-title">Agency Digital</h1>
                             <p>JS/CSS/HTML</p>
                             <a href="$">Read More</a>
                         </div>
@@ -203,15 +203,16 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="project-container-description bg-project2">
-                        <div class="d-none">
+                        <div class="d-none active">
                             <h1 class="project-container-title">Agency Digital</h1>
                             <p>JS/CSS/HTML</p>
                             <a href="$">Read More</a>
                         </div>
                     </div>
-                </div> <div class="col-sm-3">
+                </div> 
+                <div class="col-sm-3">
                     <div class="project-container-description bg-project3">
-                        <div class="d-none">
+                        <div class="d-none active">
                             <h1 class="project-container-title">Agency Digital</h1>
                             <p>JS/CSS/HTML</p>
                             <a href="$">Read More</a>
@@ -222,7 +223,7 @@
             <div class="row justify-content-around text-center flex-nowwrap">
                 <div class="col-sm-3">
                     <div class="project-container-description bg-project4">
-                        <div class="d-none">
+                        <div class="d-none active">
                             <h1 class="project-container-title">Agency Digital</h1>
                             <p>JS/CSS/HTML</p>
                             <a href="$">Read More</a>
@@ -231,7 +232,7 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="project-container-description bg-project5">
-                        <div class="d-none">
+                        <div class="d-none active">
                             <h1 class="project-container-title">Agency Digital</h1>
                             <p>JS/CSS/HTML</p>
                             <a href="$">Read More</a>
@@ -239,7 +240,7 @@
                     </div>
                 </div> <div class="col-sm-3">
                     <div class="project-container-description bg-project6">
-                        <div class="d-none">
+                        <div class="d-none active">
                             <h1 class="project-container-title">Agency Digital</h1>
                             <p>JS/CSS/HTML</p>
                             <a href="$">Read More</a>
