Add media queries responsive

--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
             </div>
             <div class="row skills-qualities">
                 <div class="col-sm-3">
-                    <div class="skill-descrption" >
+                    <div class="skill-description" >
                         <div class="skill-shape"><img src="./assets/img/speedometer.svg" class="img-fluid" alt=""></div>
                         <h1>Fast</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="skill-descrption">
+                    <div class="skill-description">
                         <div class="skill-shape"><img src="./assets/img/responsive.svg" class="img-fluid" alt=""></div>
-                        <h1>Responsive</h1>
+                        <h1>Respon</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="skill-descrption">
+                    <div class="skill-description">
                         <div class="skill-shape"><img src="./assets/img/proactivo.svg" class="img-fluid" alt=""></div>
                         <h1>Proactive</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="skill-descrption">
+                    <div class="skill-description">
                         <div class="skill-shape"><img src="./assets/img/idea.svg" class="img-fluid" alt=""></div>
                         <h1>Intuitive</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
@@ -185,7 +185,7 @@
     </section>
 
     <section class="project">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="col-xs-12">
                     <h1 class="project-title">Projects</h1>
