Add media queries and I create file variables.scss

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <p class="user-name">Oswaldo Hernández</p>
                     <p class="user-employment">Frontend Developer</p>
                 </div>
-                <a href="#"><img src="./assets/img/sroll.png" alt=""></a>
+                <a href="#"><img src="./assets/img/sroll.png" alt="" class="scroll-animation"></a>
             </div>
             <!--segundo contenedor-->
             <div class="contain-right">            
@@ -136,13 +136,13 @@
                     </div>
                     <div class="col-xs-3">
                         <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/html5.svg" alt="">
+                            <img src="./assets/img/html5.svg" alt="" class="html">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
                     <div class="col-xs-3">
                         <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/css3.svg" class=>
+                            <img src="./assets/img/css3.svg" class="css">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                     </div>
                     <div class="col-xs-3">
                         <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/figma-1.svg" class="img-fluid" alt="">
+                            <img src="./assets/img/figma-1.svg" class="img-fluid figma" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
         </div>
     </section>
 
-    <section class="contact container mr-1">
+    <section class="contact container">
         <div class="row">
             <div class="col-md-4 contact-contain-left">
                 <h1>Contact</h1>
