addinganimation to scroll

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <div class="user"><img src="./assets/img/user-img.jpg" alt=""></div>
                 <div class="user-description">
                     <p class="user-name">Oswaldo Hernández</p>
-                    <p class="user-employment">Frontend Developer</p>
+                    <p class="user-employment typed">Frontend Developer</p>
                 </div>
-                <a href="#"><img src="./assets/img/sroll.png" alt="" class="scroll-animation"></a>
+                <a href="#"><img src="./assets/img/sroll.png" alt="" class="scroll-animation" id="about"></a>
             </div>
             <!--segundo contenedor-->
             <div class="contain-right">            
@@ -48,7 +48,7 @@
     </section>
 
     <!--about me-->
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-header container-fluid">
             <nav class="container">
                 <a href="#">Home</a>
@@ -273,10 +273,6 @@
         </div>
     </section>
 
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/bcf8e85cd0.js" crossorigin="anonymous"></script>
 </body>
 
