Removing  class typed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="user"><img src="./assets/img/user-img.jpg" alt=""></div>
                 <div class="user-description">
                     <p class="user-name">Oswaldo Hernández</p>
-                    <p class="user-employment typed">Frontend Developer</p>
+                    <p class="user-employment">Frontend Developer</p>
                 </div>
                 <a href="#"><img src="./assets/img/sroll.png" alt="" class="scroll-animation" id="about"></a>
             </div>
