Add queries responsive panel btn and I fix some details scroll, fetch and the bar link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
     <!--header-->
     <section class="home">
@@ -39,7 +40,7 @@
                     <p class="user-name">Oswaldo Hernández</p>
                     <p class="user-employment">Frontend Developer</p>
                 </div>
-                <a href="#"><img src="./assets/img/sroll.png" alt="" class="scroll-animation" id="about"></a>
+                <a href="#"><img src="./assets/img/sroll.png" alt="" class="scroll-animation"></a>
             </div>
             <!--segundo contenedor-->
             <div class="contain-right">            
@@ -48,231 +49,54 @@
     </section>
 
     <!--about me-->
-    <section class="about" id="about">
-        <div class="about-header container-fluid">
-            <nav class="container">
-                <a href="#">Home</a>
-                <a href="#" class="active">About</a>
-                <a href="#">Skills</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
-            </nav>
-        </div>
-        <div class="about-main container d-flex flex-column align-items-center">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h1>About</h1>
-                </div>
-            </div>
-            <div class="about-image row">
-                <div class="col-sm 12">
-                    <img src="./assets/img/user-img.jpg" class="image" alt="">
-                    <img src="./assets/img/comilla.svg" alt="" class="image-comilla">
-                    
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="about-description">
-                        <p> Hey what's up!, I 'm Oswaldo Hernández and i'm Front-end Developer Jr,
-                            i'am mexican. Currently i'm studying Computer System Enginner at 
-                            ESCOM-IPN, i'm passionate of the world of the Front and UI, i really 
-                            like learn new things how IA, Programming Lenguages, and topic about 
-                            of science.
-                            <br>
-                            <br>
-                            In my free time i like to ride a bike and talk with my friends of anything,
-                            als i like read.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="skills">
-        <div class="container">
-            <div class="row skills-title">
-                <div class="col-sm-12"><h1>Skills</h1></div>
-            </div>
-            <div class="row skills-qualities">
-                <div class="col-sm-3">
-                    <div class="skill-description" >
-                        <div class="skill-shape"><img src="./assets/img/speedometer.svg" class="img-fluid" alt=""></div>
-                        <h1>Fast</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="skill-description">
-                        <div class="skill-shape"><img src="./assets/img/responsive.svg" class="img-fluid" alt=""></div>
-                        <h1>Respon</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="skill-description">
-                        <div class="skill-shape"><img src="./assets/img/proactivo.svg" class="img-fluid" alt=""></div>
-                        <h1>Proactive</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="skill-description">
-                        <div class="skill-shape"><img src="./assets/img/idea.svg" class="img-fluid" alt=""></div>
-                        <h1>Intuitive</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, iure.</p>
-                    </div>
-                </div>
-            </div>
-            <!--skills-tecnologies-->
-            <div class="skills-tecnologies">
-                <div class="row justify-content-between">
-                    <div class="col-xs-3">
-                       <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/javascript.svg"alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                       </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/html5.svg" alt="" class="html">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/css3.svg" class="css">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/bootstrap-4.svg" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </div>
-                <!--segundo row-->
-                <div class="row margin-top justify-content-between">
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/sass-1.svg" class="img-fluid" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/adobe-xd-1.svg" class="img-fluid" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/figma-1.svg" class="img-fluid figma" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                    <div class="col-xs-3">
-                        <div class="skill-tecnolgies-container-description">
-                            <img src="./assets/img/photoshop-cc.svg" class="img-fluid" alt="">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="project">
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col-xs-12">
-                    <h1 class="project-title">Projects</h1>
-                </div>
-            </div>
-            <div class="row justify-content-around text-center">
-                <div class="col-sm-3">
-                    <div class="project-container-description bg-project1">
-                        <div class="d-none active">
-                            <h1 class="project-container-title">Agency Digital</h1>
-                            <p>JS/CSS/HTML</p>
-                            <a href="$">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="project-container-description bg-project2">
-                        <div class="d-none active">
-                            <h1 class="project-container-title">Agency Digital</h1>
-                            <p>JS/CSS/HTML</p>
-                            <a href="$">Read More</a>
-                        </div>
-                    </div>
-                </div> 
-                <div class="col-sm-3">
-                    <div class="project-container-description bg-project3">
-                        <div class="d-none active">
-                            <h1 class="project-container-title">Agency Digital</h1>
-                            <p>JS/CSS/HTML</p>
-                            <a href="$">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-around text-center flex-nowwrap">
-                <div class="col-sm-3">
-                    <div class="project-container-description bg-project4">
-                        <div class="d-none active">
-                            <h1 class="project-container-title">Agency Digital</h1>
-                            <p>JS/CSS/HTML</p>
-                            <a href="$">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="project-container-description bg-project5">
-                        <div class="d-none active">
-                            <h1 class="project-container-title">Agency Digital</h1>
-                            <p>JS/CSS/HTML</p>
-                            <a href="$">Read More</a>
-                        </div>
-                    </div>
-                </div> <div class="col-sm-3">
-                    <div class="project-container-description bg-project6">
-                        <div class="d-none active">
-                            <h1 class="project-container-title">Agency Digital</h1>
-                            <p>JS/CSS/HTML</p>
-                            <a href="$">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="contact container">
+<section class="about" id="test">
+    <div class="about-header container-fluid">
+        <nav class="container">
+            <a href="#home" class="home_">Home</a>
+            <a href="#about" class="about_">About</a>
+            <a href="#skills" class="skills_">Skills</a>
+            <a href="#projects" class="projects_">Projects</a>
+            <a href="#contact" class="contact_">Contact</a>
+        </nav>
+    </div>
+    <div class="about-main container d-flex flex-column align-items-center" id="test1">
         <div class="row">
-            <div class="col-md-4 contact-contain-left">
-                <h1>Contact</h1>
-                <div class="contact-email"><a href=""><i class="far fa-envelope email-icon"></i>valdo_monster[arroba]hotmail.com</a></div>
-                <div class="contact-twitter"><a href=""><i class="fab fa-twitter twitter-icon"></i>@v4lnet</a></div>
-                <div class="contact-linkedin"><a href=""><i class="fab fa-linkedin-in linkedin-icon"></i>Oswaldo Hernández</a></div>
-            </div>
-            <div class="col-md-7 contact-contain-right">
-                <form action="">
-                    <label for="">Name</label>
-                    <input type="text" placeholder="Your name" required class="form-input">
-                    <label for="">Email</label>
-                    <input type="email" placeholder="Your email" required class="form-input">
-                    <label for="">Message</label>
-                    <textarea placeholder="Message" class="form-textarea"></textarea>
-                    <input type="submit" value="Send" class="btn-input">
-                </form>
+            <div class="col-sm-12">
+                <h1>About</h1>
             </div>
         </div>
-    </section>
+        <div class="about-image row">
+            <div class="col-sm 12">
+                <img src="./assets/img/user-img.jpg" class="image" alt="">
+                <img src="./assets/img/comilla.svg" alt="" class="image-comilla">
+                
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="about-description">
+                    <p> Hey what's up!, I 'm Oswaldo Hernández and i'm Front-end Developer Jr,
+                        i'am mexican. Currently i'm studying Computer System Enginner at 
+                        ESCOM-IPN, i'm passionate of the world of the Front and UI, i really 
+                        like learn new things how IA, Programming Lenguages, and topic about 
+                        of science.
+                        <br>
+                        <br>
+                        In my free time i like to ride a bike and talk with my friends of anything,
+                        als i like read.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <button class="d-md-none panel-btn hamburger--spin" type="button">
+        <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+        </span>
+    </button> -->
+</section>
 
+    <script src="./JavaScript/main.js"></script>
     <script src="https://kit.fontawesome.com/bcf8e85cd0.js" crossorigin="anonymous"></script>
 </body>
 
